--- a/css/master.css
+++ b/css/master.css
@@ -140,6 +140,8 @@ main{
 }
 
 
+/* Terza sezione */
+
 .third.section-container{
     height: 400px;
     margin-top: 100px;
@@ -155,6 +157,49 @@ main{
     width: 40%;
     background-color: limegreen;
 }
+
+
+/* Quarta sezione */
+.fourth.section-container{
+    height: 800px;
+    margin-top: 100px;
+    background-color: dimgray;
+}
+
+
+.fourth.section-container h2{
+    font-size: 27px;
+}
+
+
+.cards-line1{
+    height: 350px;
+    margin-top: 50px;
+    margin-bottom: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:red ;
+    border: 1px solid black;
+}
+
+.cards-line2{
+    height: 350px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: red;
+}
+
+
+/* Quinta sezione */
+
+.fifth.section-container{
+    height: 200px;
+    margin-top: 100px;
+    background-color: violet;
+}
+
 
 
 /* Footer */
