--- a/css/master.css
+++ b/css/master.css
@@ -28,12 +28,50 @@ header{
     z-index: 600;
 }
 
+a{
+    font-size: 15px;
+    text-decoration: none;
+    color: grey;
+}
+
 .right.stuff{
     margin-left: 20px;
 }
 
+
+.right.stuff img{
+    margin-right: 20px;
+}
+
+
+.right.stuff a+a{
+    margin-left: 20px;
+}
+
+.left-stuff{
+    margin-right: 15px;
+}
+
+
+.left-stuff a+a{
+    margin-right: 20px;
+}
+
+#supporto{
+    margin-right: 20px;
+}
+
+#inizia{
+    color: white;
+    background-color: #0061ff;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
+
+
+
 .jumbotron{
-    height: 500px;
+    height: 600px;
     width: 100%;
     background-color: #b4d0e7;
     margin-top: 90px;
@@ -44,7 +82,7 @@ header{
 
 .jumbotron-container{
     height: 600px;
-    margin: 0px 200px 20px 300px;
+    margin: 0px 200px 20px 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,34 +91,50 @@ header{
 
 .jb-img{
     height: 200px;
-    width: 800px;
+    width: 865px;
     display: flex;
     flex-direction: row;
 
 }
 
 .jb-text h1{
-    font-size: 50px;
+    font-size: 60px;
     margin-bottom: 40px;
 }
 
 .jb-col1{
-    height: 260px;
+    height: 300px;
     width: 40%;
-    background-color: red;
+    /* background-color: red; */
+}
+
+.jb-col1 p{
+    font-size: 15px;
+    margin-bottom: 20px;
+}
+
+.jb-col1 div{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#arrow{
+    font-size: 50px;
+    margin-top: 30px;
+    color: black;
 }
 
 .jb-col2{
-    height: 300px;
+    height: 400px;
     width: 80%;
-    background-color: bisque;
+    /* background-color: bisque; */
 
 }
 
 .jb-col2 img{
     min-height: 320px;
-    max-width: 100%;
-    object-fit: cover;
+    max-width: 120%;
+    /* object-fit: cover; */
     
 }
 
@@ -89,8 +143,8 @@ header{
 
 main{
     height: 1500vh;
-    /* width: 100%; */
-    margin: 100px 300px 50px 300px;
+    max-width: 100%;
+    margin: 150px 250px 50px 250px;
     background-color: white;
 }
 
@@ -122,9 +176,6 @@ main{
     background-color: aquamarine;
 }
 
-.plan-col{
-    background-color: red;
-}
 
 
 
