--- a/css/master.css
+++ b/css/master.css
@@ -32,6 +32,7 @@ a{
     font-size: 15px;
     text-decoration: none;
     color: grey;
+    cursor: pointer;
 }
 
 .right.stuff{
@@ -174,6 +175,22 @@ main{
     justify-content: space-between;
     align-items: stretch;
     background-color: aquamarine;
+}
+
+label{
+    padding-left: 20px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+input{
+    top: 0;
+    margin-right: 10px;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
+    cursor: pointer;   
 }
 
 
