--- a/css/master.css
+++ b/css/master.css
@@ -65,7 +65,6 @@ a{
 #inizia{
     color: white;
     background-color: #0061ff;
-    border-radius: 5px;
     padding: 5px 10px;
 }
 
@@ -145,7 +144,7 @@ a{
 main{
     height: 1500vh;
     max-width: 100%;
-    margin: 150px 250px 50px 250px;
+    margin: 150px 190px 50px 250px;
     background-color: white;
 }
 
@@ -185,7 +184,7 @@ input{
 }
 
 .subscription-plans{
-    height: 800px;
+    height: 950px;
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
@@ -194,53 +193,105 @@ input{
 }
 
 .plan-col1{
-    height: 800px;
-    width: calc(100%/3);
-    display: flex;
+    height: 950px;
+    width: 255px;
+    /* display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: flex-start; */
     border: 1px solid #d4dde4;
+    margin-right: 30px;
+}
+
+
+.intestazione{
+    height: 24px;
+    width: 255px;
+    /* background-color: yellow; */
+    border-bottom: 1px solid #d4dde4;
 }
 
 #icon-plan{
-    margin-left: 20px;
+    margin-left: 80px;
     margin-right: 10px;
 }
 
-/* hr{ */
-    /* display: block; */
-    /* color: #d4dde4; */
-    /* opacity: 1; */
-/* } */
+.contenuto-col{
+    margin-left: 25px;
+    margin-top: 30px;
 
-.plan-col2{
-    height: 800px;
-    width: calc(100%/3);
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    border: 1px solid #d4dde4;
 }
 
-.plan-col3{
-    height: 800px;
-    width: calc(100%/3);
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+.pacchetto{
+    margin-top: 40px;
+}
+
+.pacchetto span{
+    margin-left: 10px;
+    font-size: 12px;
+}
+
+.prova{
+    margin-top: 30px;
+}
+
+.punti-salienti{
+    margin-top: 130px;
+}
+
+
+.plan-col2{
+    height: 950px;
+    width: 255px;
     border: 1px solid #d4dde4;
+    margin-right: 30px;
+}
+
+
+.plan-col3{
+    height: 950px;
+    width: 255px;
+    border: 1px solid #d4dde4;
+    margin-right: 30px;
+}
+
+h3{
+    margin-bottom: 20px;
 }
 
 /* Seconda sezione */
 
 .second.section-container{
     height: 200px;
-    margin-top: 50px;
+    margin-top: 250px;
     /* background-color: bisque; */
+    /* display: flex;
+    justify-content: space-between;
+    align-items: center; */
+    border: 1px solid #d4dde4;
+}
+
+.intestazione2{
+    text-align: center;
+    border-bottom: 1px solid #d4dde4;
+}
+
+.content{
+    height: 800px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    border: 1px solid #d4dde4;
+}
+
+#first-p{
+    font-weight: bold;
+}
+
+
+.cont-text p{
+   font-size: 10px;
+   margin-bottom: 20px;
 }
 
 
@@ -309,6 +360,15 @@ input{
     align-items: center;
     background-color:red ;
     border: 1px solid black;
+}
+
+.card1{
+    height: 350px;
+    width: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .cards-line2{
