Completamento tutte sezioni tranne la sesta

--- a/css/master.css
+++ b/css/master.css
@@ -216,7 +216,7 @@ input{
 }
 
 #icon-plan{
-    margin-left: 80px;
+    margin-left: 60px;
     margin-right: 10px;
 }
 
@@ -337,7 +337,7 @@ h3{
 
 /* Terza sezione */
 
-.third.section-container{
+.partner-container{
     margin: 0 auto;
     margin-top: 100px;
     max-width: 700px;
@@ -461,15 +461,102 @@ h3{
 
 /* Sesta sezione */
 .sixth.section-container{
-    height: 600px;
+    height: 500px;
     max-width: 100%;
+    margin-top: 100px;
     background-color: green;
 }
+
+/* Settima sezione */
+.free-trial-container{
+    background-color: #b4d0e7;
+}
+
+.free-trial{
+    height: 200px;
+    margin: 0 auto;
+    max-width: 700px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.free-trial h2{
+    font-size: 20px;
+}
+
+.free-trial a{
+    background-color: white;
+    padding: 5px 10px;
+    color: black;
+}
+
+/* Ottava sezione */
+.faq-container{
+    height: 400px;
+    margin: 0 auto;
+    margin-top: 100px;
+    max-width: 700px;
+}
+
+.faq-container span{
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.faq-container hr{
+    margin-top: 30px;
+    margin-bottom: 60px;
+}
+
+.faq-title{
+    margin-bottom: 40px;
+}
+
+.faq.box1{
+    border-top: 1px solid #b2b2b2;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.faq.box2{
+    border-top: 1px solid #b2b2b2;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.faq.box3{
+    border-top: 1px solid #b2b2b2;
+    border-bottom: 1px solid #b2b2b2;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.faq.box1 a{
+   color: black;
+}
+
+
+.faq.box2 a{
+    color: black;
+ }
+
+
+ .faq.box3 a{
+    color: black;
+ }
+
 
 
 /* Footer */
 footer{
-    height: 500px;
     max-width: 100%;
     background-color: black;
     color: white;
@@ -479,19 +566,21 @@ footer{
     display: flex;
     justify-content: space-between;
     margin: auto;
-    height: 400px;
     padding: 120px 150px;
     /* background-color: red; */
     
 }
 
+.f-col{
+    margin: 0 15px;
+}
+
 ul{
     list-style-type: none;
-    margin-right: 20px;
 }
 
 ul a{
-    font-size: 15px;
+    font-size: 12px;
     font-weight: lighter;
     color:white
 }
@@ -504,4 +593,27 @@ ul a{
 
 ul li+li{
     margin: 10px 0 10px 0;
+}
+
+/* Footer bottom bar */
+
+.footer.bottom-bar{
+    /* background-color: grey; */
+    max-width: 120px;
+    margin-left: 150px;
+}
+
+.bb.elements{
+    padding-bottom: 35px;
+    padding-top: 25px;
+}
+
+.bb.elements i{
+    margin-right: 5px;
+    font-size: 15px;
+    color: grey;
+}
+
+.bb.elements a{
+    margin-right: 5px;
 }
